--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,16 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/mockito/mockito-core/5.12.0/mockito-core-5.12.0.jar"
+                    </argLine>
+                </configuration>
+            </plugin>
             <!-- Shade plugin to build an executable jar -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
